<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/activity_news_rss_resource_edit_text"
        android:hint="@string/rss_input_placeholder"
        app:layout_constraintEnd_toStartOf="@id/activity_news_button_submit"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/activity_news_button_submit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:background="@drawable/filter_button"
        android:layout_width="70dp"
        android:layout_height="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_news_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/activity_news_rss_resource_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/activity_news_button_brightness"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/filter_button"
        android:text="@string/brightness"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_news_button_color_overlay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/activity_news_button_color_overlay"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/filter_button"
        android:text="@string/color_overlay"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_news_button_saturation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_news_button_brightness" />

    <Button
        android:id="@+id/activity_news_button_saturation"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/filter_button"
        android:text="@string/saturation"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_news_button_color_overlay" />

</androidx.constraintlayout.widget.ConstraintLayout>